# rust-faust

./: Cargo.toml
examples/dsp-macro/: Cargo.toml  DEBUG_volume_control.json
examples/example-array/: Cargo.toml  build.rs
examples/example-array/src/: dsp.rs  main.rs
examples/example-dbmeter-jack/src/: main.rs
examples/example-f64/: Cargo.toml  build.rs
examples/example-f64/dsp/: volume.dsp  volume.dsp.json  volume.dsp.xml
examples/example-f64/src/: dsp.rs  dsp_for_enum.rs  dsp_handwritten_for_comute.rs  dsp_new_to_default.rs  main.rs
examples/example-jack/: Cargo.toml  build.rs
examples/example-jack-macro/: Cargo.toml
examples/example-jack-macro/src/: main.rs
examples/example-jack/src/: dsp.rs  main.rs
examples/file-f64/: Cargo.toml  build.rs
examples/file-f64/dsp/: volume.dsp.json  volume.dsp.xml
examples/file-f64/src/: dsp.rs  dsp2.rs  main.rs
examples/include-macro/: Cargo.toml
examples/jack-ui/: Cargo.toml
examples/jack-ui-enum/: Cargo.toml  build.rs
examples/jack-ui-enum/dsp/: saw.dsp  saw.dsp.json  tri.dsp  tri.dsp.json
examples/jack-ui-enum/src/: main.rs  saw.rs  saw2024.rs  tri.rs  tri2024notsogood.rs
examples/jack-ui-trait/: Cargo.toml  build.rs
examples/jack-ui-trait/dsp/: saw.dsp  saw.dsp.json  tri.dsp.json
examples/jack-ui-trait/src/: main.rs  saw.rs  tri.rs
examples/jack-ui/src/: dsp.rs
examples/jack-utils/src/: lib.rs
faust-build/: Cargo.toml  faust-template.rs
faust-build/src/: builder.rs  code_option.rs  faust_arg.rs  lib.rs  macro_lib.rs
faust-json/: Cargo.toml
faust-json/src/: lib.rs
faust-json/tests/: tests.rs
faust-macro/: Cargo.toml
faust-macro/src/: lib.rs
faust-state/src/: lib.rs
faust-types/: Cargo.toml
faust-types/src/: lib.rs
faust-ui/: Cargo.toml
faust-ui/src/: enum_interface.rs  lib.rs  meta_strings.rs  struct_interface.rs  utils.rs
faust-xml/src/: lib.rs
