[workspace]
members = [
  "faust-macro", 
  "faust-build", 
  "faust-types", 
  "faust-state",
  "faust-xml", 
  "examples/example-array",
  "examples/example-jack",
  "examples/example-jack-macro",
  "examples/example-dbmeter-jack", 
  "examples/example-f64", 
  "examples/example-f64xml"
]
resolver="2"
