[package]
name = "faust-json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] } 
#serde_json = "1"
serde_json = { package = "serde_json_path_to_error", version = "0.1" }
quote = "^1.0"
prettyplease = "^0.2"
syn = "^2.0"
proc-macro2 = "*"