[package]
name = "faust-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
proc-macro = true

[features]
debug = []

[dependencies]
faust-build = { git = "http://github.com/crop2000/rust-faust.git", branch="my_ref_with_tempfile"}

tempfile = "3.2.0"
