[package]
name = "faust-macro"
version = "0.1.0"
authors = ["olafklingt"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
proc-macro = true

[features]
debug = []

[dependencies]
#faust-build = { git = "http://github.com/crop2000/rust-faust.git", branch="my_ref_with_tempfile"}
faust-build = { path = "../faust-build" }
faust-json =  { path = "../faust-json" }

tempfile = "3.2.0"
prettyplease = "^0.2"
syn = "^2.0"
proc-macro2 = "*"
quote = "^1.0"
serde_json = "*"
