[package]
name = "example-f64"
version = "0.1.0"
edition = "2021"

[features]
cfg = ['default-boxed']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
faust-types = { path = "../../faust-types" }
default-boxed = { version = "*", optional = true}

[build-dependencies]
faust-build = { path = "../../faust-build" }
